# venture

./: .arc  .gitignore  .pylintrc  Pipfile  README.md  config.toml  config.yaml  mypy.ini  pyproject.toml  rgb_to_hex.py  setup.py
docs/: changelog.md  configuration.md  icons.md  modes.md
src/old/: cli.py  config.py  tags.py
src/old/ui/: ui_provider.py
src/venture/: __main__.py  browse_list.py  cli.py  config.py  icons.py  project_list.py  tags.py  types.py  util.py
src/venture/ui/: __init__.py  dmenu_like.py  rofi.py  ui_provider.py  wofi.py
src/wofi_projects/: __main__.py  config.py  icons.py  project_list.py  types.py
src/wofi_projects/ui/: __init__.py  ui_provider.py  wofi.py
venture/: browse.py  cli.py  config.py  ext.py  icons.py  pango.py  quicklaunch.py
