[tool.poetry]
name = "venture"
version = "2.2.1"
description = "Rofi / Wofi based project selector"
authors = ["Sean Collings <seanrcollings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seanrcollings/venture"
packages = [
    {include = "venture", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
arc-cli = "7.0.0"
ujson = "^4.0.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.7.0"
types-PyYAML = "^0.1.5"


[tool.poetry.scripts]
venture = "venture.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
