[tool.poetry]
name = "venture"
version = "3.0.0"
description = "Rofi / Wofi based project selector"
authors = ["Sean Collings <seanrcollings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seanrcollings/venture"


[tool.poetry.dependencies]
python = "^3.10"
arc-cli = "8.0.0"
ujson = "^4.0.2"
pydantic = "^1.8.2"
toml = "^0.10.2"
xdg = "^5.1.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.3.1"
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.7.0"


[tool.poetry.scripts]
venture = "venture.cli:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
